--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h1{
 /******** Username Input ************/
 .l-form{
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   height: 90vh;
   padding-right: 50px;
@@ -80,7 +80,7 @@ h1{
 @media (min-width: 200px){
   .l-form{
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   height: 90vh;
   padding-left: 50px;
