added profile.html and dash.css, changed navbar button to 3 dot

--- a/style.css
+++ b/style.css
@@ -190,3 +190,8 @@ h1{
   height: 60px;
 }
 /************ End Of Username Input ************/
+
+.navbar-dark .navbar-toggler {
+  color: rgba(255,255,255,.55);
+  border : none;
+}
