--- a/dash.css
+++ b/dash.css
@@ -47,15 +47,111 @@ button {
 }
 
 .card {
-  margin: 0 auto; /* Added */
-  float: none; /* Added */
-  margin-bottom: 10px; /* Added */
+  margin: 0 auto; 
+  float: none; 
+  margin-bottom: 10px; 
+  margin-left: 35%;
+  margin-top: 3%;
+  margin-right: 13%;
 }
 
 /* image size */
-.card-img-top {
+#card-img-top {
   width: 100%;
   height: 100%;
   object-fit: cover;
+ 
 }
 
+.card-body{
+  margin-top: 10rem;
+}
+
+.ds-top {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 25%;
+  background: black;
+  /* animation: dsTop 1.5s; */
+}
+
+.avatar-holder {
+  position: absolute;
+  margin: auto;
+  margin-top: 10%;
+  margin-left: 5%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 5px #151515,
+              inset 0 0 0 5px #000000,
+              inset 0 0 0 5px #000000,
+              inset 0 0 0 5px #000000,
+              inset 0 0 0 5px #000000,;
+  background: white;
+  overflow: hidden;
+  animation: mvTop 1.5s;
+  
+}
+.col-sm{
+  font-family:sans-serif;
+  font-size: large;
+  animation: fadeInMove 2s;
+  animation-fill-mode: forwards;
+  text-align: center;
+}
+.col-sm:hover{
+  color:#B15DFF;
+}
+.name{
+  font-size: 40px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+#detail{
+  font-family: 'Times New Roman', Times, serif;
+}
+@keyframes fadeInMove {
+  0% {
+    opacity: 0;
+    left: -300px;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+
+
+@keyframes mvBottom {
+  0% {bottom: -150px;}
+  100% {bottom: 10px;}
+}
+
+@keyframes mvTop {
+  0% {top: -150px;}
+  100% {top: 0px;}
+}
+
+@keyframes dsTop {
+  0% {top: -150px;}
+  100% {top: 0;}
+}
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
