--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -2,20 +2,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Courgette&family=Orbitron:wght@400;500&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
-:root{
+
+:root {
   /*===== Colores =====*/
   --first-color: #B15DFF;
   --input-color: #80868B;
   --border-color: #DADCE0;
   --font-color: #D7D7D7;
-  --h1toh6-color:#e9e9e9;
+  --h1toh6-color: #e9e9e9;
 
   /*===== Fuente y tipografia =====*/
   --body-font: 'Roboto', sans-serif;
   --normal-font-size: 1rem;
   --small-font-size: .75rem;
 }
- /******** Color Selection Reference*********/
+
+/******** Color Selection Reference*********/
 /* :root{
   /*Light Theme 
 --first-color: #F4F4F4;
@@ -35,12 +37,12 @@ submit button hover:#03DAC5
 
 /******** Nav bar *********/
 
-.navcolor{
-    background-color: #262729; 
+.navcolor {
+  background-color: #262729;
 }
 
-.material-icons:hover{
-    color: var(--first-color);
+.material-icons:hover {
+  color: var(--first-color);
 }
 
 @media (min-width: 992px) {
@@ -53,26 +55,31 @@ submit button hover:#03DAC5
 
 /********* Remove Scroll Effect ***********/
 html::-webkit-scrollbar {
-    width: 0px; /* For Chrome, Safari, and Opera */
+  width: 0px;
+  /* For Chrome, Safari, and Opera */
 }
 
 /*===== Username Card BASE =====*/
-*,::before,::after{
+*,
+::before,
+::after {
   box-sizing: border-box;
 }
-body{
+
+body {
   background-color: #121212;
   margin: 0;
   padding: 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
 }
-h1{
+
+h1 {
   margin: 0;
 }
 
 /******** Username Input ************/
-.l-form{
+.l-form {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -80,18 +87,18 @@ h1{
   padding-right: 50px;
 }
 
-@media (min-width: 200px){
-  .l-form{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  height: 90vh;
-  padding-left: 50px;
+@media (min-width: 200px) {
+  .l-form {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 90vh;
+    padding-left: 50px;
   }
 }
 
-.form{
-  background-color:#262729 ;
+.form {
+  background-color: #262729;
   width: 360px;
   padding: 4rem 2rem;
   border-radius: 1rem;
@@ -100,24 +107,26 @@ h1{
   top: 0;
   transition: top ease 0.5s;
 }
-.form:hover{
-    background-color: #333335;
-    top: -10px;   
+
+.form:hover {
+  background-color: #333335;
+  top: -10px;
 }
 
-.form__title{
-  color :#D7D7D7;
+.form__title {
+  color: #D7D7D7;
   font-weight: 400;
   margin-bottom: 3rem;
   font-size: 2rem;
 }
 
-.form__div{
+.form__div {
   position: relative;
   height: 48px;
   margin-bottom: 1.5rem;
 }
-.form__input{
+
+.form__input {
   position: absolute;
   top: 0;
   left: 0;
@@ -132,18 +141,19 @@ h1{
   background: none;
   z-index: 1;
 }
-.form__label{
+
+.form__label {
   position: absolute;
   left: 1rem;
   top: 1rem;
   padding: 0 .25rem;
-  background-color:#262729 ;
+  background-color: #262729;
   color: var(--input-color);
   font-size: var(--normal-font-size);
   transition: .3s;
 }
 
-.form__button{
+.form__button {
   display: block;
   margin-left: auto;
   padding: .75rem 2rem;
@@ -156,14 +166,15 @@ h1{
   cursor: pointer;
   transition: .3s;
 }
-.form__button:hover{
-  box-shadow: 0 10px 36px rgba(0,0,0,.15);
+
+.form__button:hover {
+  box-shadow: 0 10px 36px rgba(0, 0, 0, .15);
   background-color: #8108f3;
   color: var(--h1toh6-color);
 }
 
 /*Input focus move up label*/
-.form__input:focus + .form__label{
+.form__input:focus+.form__label {
   top: -.5rem;
   left: .8rem;
   color: var(--first-color);
@@ -174,7 +185,7 @@ h1{
 }
 
 /*Input focus sticky top label*/
-.form__input:not(:placeholder-shown).form__input:not(:focus)+ .form__label{
+.form__input:not(:placeholder-shown).form__input:not(:focus)+.form__label {
   top: -.5rem;
   left: .8rem;
   font-size: var(--small-font-size);
@@ -183,7 +194,7 @@ h1{
 }
 
 /*Input focus*/
-.form__input:focus{
+.form__input:focus {
   border: 1.5px solid var(--first-color);
 }
 
@@ -192,50 +203,51 @@ h1{
   width: 100%;
   height: 60px;
 }
+
 /************ End Of Username Input ************/
 
 .navbar-dark .navbar-toggler {
-  color: rgba(255,255,255,.55);
-  border : none;
+  color: rgba(255, 255, 255, .55);
+  border: none;
 }
 
 /*****content ************/
 
-.display-6{
-  color:var(--h1toh6-color);
+.display-6 {
+  color: var(--h1toh6-color);
   font-weight: bold;
-  font-family:'Abril';
+  font-family: 'Abril';
 }
 
-.typewrite{
+.typewrite {
   color: #B15DFF;
-  text-decoration:none;
+  text-decoration: none;
   font-weight: bold;
-  font-family:'Abril';
+  font-family: 'Abril';
 }
 
 /* To move the  graph */
 
-#graph {
-  animation: mover 1s ease-in-out infinite  alternate;
-  -webkit-animation: mover 1s ease-in-out infinite  alternate;
+.graphh {
+  animation: mover 1s ease-in-out infinite alternate;
+  -webkit-animation: mover 1s ease-in-out infinite alternate;
   transform-origin: center;
 }
 
-@keyframes mover{
-  from{
-    transform:rotateX(1deg)  ;
-    -webkit-transform:rotateX(1deg)  ;
-    -moz-transform:rotateX(1deg)  ;
-    -ms-transform:rotateX(1deg)  ;
-    -o-transform:rotateX(1deg)  ;
-}
-  to{
-    transform:rotateX(25deg)  ;
-    -webkit-transform:rotateX(25deg)  ;
-    -moz-transform:rotateX(25deg)  ;
-    -ms-transform:rotateX(25deg)  ;
-    -o-transform:rotateX(25deg)  ;
-}
-}
+@keyframes mover {
+  from {
+    transform: rotateX(1deg);
+    -webkit-transform: rotateX(1deg);
+    -moz-transform: rotateX(1deg);
+    -ms-transform: rotateX(1deg);
+    -o-transform: rotateX(1deg);
+  }
 
+  to {
+    transform: rotateX(25deg);
+    -webkit-transform: rotateX(25deg);
+    -moz-transform: rotateX(25deg);
+    -ms-transform: rotateX(25deg);
+    -o-transform: rotateX(25deg);
+  }
+}
