--- a/stylesheet/sidenav.css
+++ b/stylesheet/sidenav.css
@@ -95,7 +95,9 @@
 }
 .sidebar .nav-links li i{
   height: 50px;
-  min-width: 78px;
+  min-width: 390px;
+  position: relative;
+  left: -155px;
   text-align: center;
   line-height: 50px;
   color: #757575;
@@ -121,6 +123,8 @@
   font-size: 18px;
   font-weight: 400;
   color: #e9e9e9;
+  position: relative;
+  left: -310px;
   transition: all 0.4s ease;
   
 }
