--- a/stylesheet/sidenav.css
+++ b/stylesheet/sidenav.css
@@ -1,4 +1,5 @@
 /* Google Fonts Import Link */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 *{
   margin: 0;
@@ -13,6 +14,7 @@
 .active{
   color:#B15DFF;
 }
+
 
 .active::before{
   content: '';
@@ -231,6 +233,27 @@
   font-weight: 600;
 }
 
+
+/* footer part */
+.footer{
+  padding: 1rem;
+  background-color: #1F1B24;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  left:260px;
+  width: calc(100% - 260px);
+  transition: all 0.5s ease;
+  position: fixed;
+  bottom: 0;
+}
+
+.sidebar.close ~ .footer{
+  left: 78px;
+  width: calc(100% - 78px);
+}
+
 /* Responsivne */
 @media only screen and (max-width: 600px) {
   .sidebar.close {
@@ -240,6 +263,11 @@
     left: 1px;
     width: calc(100% - 1px);
   }
- 
+  .sidebar.close ~ .footer{
+    left: 1px;
+    width: 100%;
+  }
 }
+
+
 
