--- a/stylesheet/sidenav.css
+++ b/stylesheet/sidenav.css
@@ -1,48 +1,48 @@
 /* Google Fonts Import Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-#header-toggle:hover{
-  color:#B15DFF;
+#header-toggle:hover {
+  color: #b15dff;
 }
 /*Active links*/
-.active{
-  color:#B15DFF;
+.active {
+  color: #b15dff;
 }
 
-.active::before{
-  content: '';
+.active::before {
+  content: "";
   position: absolute;
   left: 0;
   width: 2px;
   height: 32px;
-  background-color: #B15DFF;
+  background-color: #b15dff;
   color: #fff;
 }
-.sidebar{
+.sidebar {
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 260px;
-  background:  #1F1B24;
+  background: #1f1b24;
   z-index: 6;
   transition: all 0.5s ease;
 }
-.sidebar.close{
+.sidebar.close {
   width: 78px;
 }
-.sidebar .logo-details{
+.sidebar .logo-details {
   height: 60px;
   width: 100%;
   display: flex;
   align-items: center;
 }
-.sidebar .logo-details i{
+.sidebar .logo-details i {
   font-size: 30px;
   color: #fff;
   height: 50px;
@@ -50,35 +50,35 @@
   text-align: center;
   line-height: 50px;
 }
-.sidebar .logo-details .logo_name{
+.sidebar .logo-details .logo_name {
   font-size: 18px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: 600;
   transition: 0.3s ease;
   transition-delay: 0.1s;
 }
-.sidebar.close .logo-details .logo_name{
+.sidebar.close .logo-details .logo_name {
   transition-delay: 0s;
   opacity: 0;
   pointer-events: none;
 }
-.sidebar .nav-links{
+.sidebar .nav-links {
   height: 100%;
   padding: 30px 0 150px 0;
   overflow: auto;
 }
-.sidebar.close .nav-links{
+.sidebar.close .nav-links {
   overflow: visible;
 }
-.sidebar .nav-links::-webkit-scrollbar{
+.sidebar .nav-links::-webkit-scrollbar {
   display: none;
 }
-.sidebar .nav-links li{
+.sidebar .nav-links li {
   position: relative;
   list-style: none;
   transition: all 0.4s ease;
 }
-.sidebar .nav-links li:hover{
+.sidebar .nav-links li:hover {
   background: #7b1fa2;
   border-radius: 0 60px 60px 0;
   -webkit-border-radius: 0 60px 60px 0;
@@ -86,15 +86,15 @@
   -ms-border-radius: 0 60px 60px 0;
   -o-border-radius: 0 60px 60px 0;
 }
-.sidebar .nav-links li .iocn-link{
+.sidebar .nav-links li .iocn-link {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.sidebar.close .nav-links li .iocn-link{
-  display: block
+.sidebar.close .nav-links li .iocn-link {
+  display: block;
 }
-.sidebar .nav-links li i{
+.sidebar .nav-links li i {
   height: 50px;
   min-width: 420px;
   position: relative;
@@ -106,54 +106,53 @@
   cursor: pointer;
   transition: all 0.3s ease;
 }
-.sidebar .nav-links li i:hover{
-  color: #FFFFFF;
+.sidebar .nav-links li i:hover {
+  color: #ffffff;
 }
 
-.sidebar .nav-links li.showMenu i.arrow{
+.sidebar .nav-links li.showMenu i.arrow {
   transform: rotate(-180deg);
 }
-.sidebar.close .nav-links i.arrow{
+.sidebar.close .nav-links i.arrow {
   display: none;
 }
-.sidebar .nav-links li a{
+.sidebar .nav-links li a {
   display: flex;
   align-items: center;
   text-decoration: none;
 }
-.sidebar .nav-links li a .link_name{
+.sidebar .nav-links li a .link_name {
   font-size: 18px;
   font-weight: 400;
   color: #e9e9e9;
   position: relative;
   left: -330px;
   transition: all 0.4s ease;
-  
 }
-.sidebar .nav-links li a .link_name:hover{
-  color: #FFFFFF;
+.sidebar .nav-links li a .link_name:hover {
+  color: #ffffff;
   display: block;
   pointer-events: none;
 }
 
-.sidebar.close .nav-links li a .link_name{
+.sidebar.close .nav-links li a .link_name {
   opacity: 0;
   pointer-events: none;
 }
-.text2{
-  color:#B15DFF;
-} 
+.text2 {
+  color: #b15dff;
+}
 
-.sidebar .nav-links li .sub-menu{
+.sidebar .nav-links li .sub-menu {
   padding: 6px 6px 14px 80px;
   margin-top: -10px;
   background: #7b1fa2;
   display: none;
 }
-.sidebar .nav-links li.showMenu .sub-menu{
+.sidebar .nav-links li.showMenu .sub-menu {
   display: block;
 }
-.sidebar .nav-links li .sub-menu a{
+.sidebar .nav-links li .sub-menu a {
   color: #fff;
   font-size: 15px;
   padding: 5px 0;
@@ -161,11 +160,10 @@
   opacity: 0.6;
   transition: all 0.3s ease;
 }
-.sidebar .nav-links li .sub-menu a:hover{
+.sidebar .nav-links li .sub-menu a:hover {
   opacity: 1;
-
 }
-.sidebar.close .nav-links li .sub-menu{
+.sidebar.close .nav-links li .sub-menu {
   position: absolute;
   left: 100%;
   top: -10px;
@@ -181,33 +179,33 @@
   -ms-border-radius: 0 6px 6px 0;
   -o-border-radius: 0 6px 6px 0;
 }
-.sidebar.close .nav-links li:hover .sub-menu{
+.sidebar.close .nav-links li:hover .sub-menu {
   top: 0;
   opacity: 1;
   pointer-events: auto;
   transition: all 0.4s ease;
 }
-.sidebar .nav-links li .sub-menu .link_name{
+.sidebar .nav-links li .sub-menu .link_name {
   display: none;
 }
-.sidebar.close .nav-links li .sub-menu .link_name{
+.sidebar.close .nav-links li .sub-menu .link_name {
   font-size: 18px;
   opacity: 1;
   display: block;
 }
-.sidebar .nav-links li .sub-menu.blank{
+.sidebar .nav-links li .sub-menu.blank {
   opacity: 1;
   pointer-events: auto;
   padding: 3px 20px 6px 16px;
   opacity: 0;
   pointer-events: none;
 }
-.sidebar .nav-links li:hover .sub-menu.blank{
+.sidebar .nav-links li:hover .sub-menu.blank {
   top: 50%;
   transform: translateY(-50%);
 }
 
-.home-section{
+.home-section {
   position: relative;
   background: #121212;
   height: 100vh;
@@ -215,69 +213,70 @@
   width: calc(100% - 260px);
   transition: all 0.5s ease;
 }
-.sidebar.close ~ .home-section{
+.sidebar.close ~ .home-section {
   left: 78px;
   width: calc(100% - 78px);
 }
-.home-section .home-content{
-  height: 45px;
+.home-section .home-content {
+  height: 75px;
   display: flex;
   align-items: center;
 }
 .home-section .home-content .bx-menu,
-.home-section .home-content .text{
-  color: #FFFFFF;
+.home-section .home-content .text {
+  color: #ffffff;
   font-size: 35px;
 }
-.home-section .home-content .bx-menu{
+.home-section .home-content .bx-menu {
   margin: 0 15px;
   cursor: pointer;
 }
-.home-section .home-content .text{
+.home-section .home-content .text {
   font-size: 26px;
   font-weight: 600;
 }
 
- /* footer part  */
-.footer{
+/* footer part  */
+.footer {
   padding: 1rem;
-  background-color: #1F1B24;
+  background-color: #1f1b24;
   color: white;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  left:260px;
+  left: 260px;
   width: calc(100% - 260px);
   transition: all 0.5s ease;
   position: fixed;
   bottom: 0;
 }
 
-.sidebar.close ~ .footer{
+.sidebar.close ~ .footer {
   left: 78px;
   width: calc(100% - 78px);
 }
-.foot{
+.foot {
   display: flex;
   gap: 8px;
 }
-.footer a{
+.footer a {
   color: white;
 }
 
- /* Responsivne  */
+/* Responsivne  */
 @media only screen and (max-width: 600px) {
   .sidebar.close {
     display: none;
   }
-  .sidebar.close ~ .home-section{
+  .sidebar.close ~ .home-section {
     left: 1px;
     width: calc(100% - 1px);
   }
-  .sidebar.close ~ .footer{
+  .sidebar.close ~ .footer {
     left: 1px;
     width: 100%;
   }
+  .container {
+    width: 100vw;
+  }
 }
-
-
