--- a/stylesheet/heatmap.css
+++ b/stylesheet/heatmap.css
@@ -24,11 +24,6 @@
   border-top-color: rgba(0, 0, 0, 0.8);
 }
 
-.chart {
-  height: 220px;
-  border-radius: 10px;
-}
-
 .svg-tip {
   padding: 10px;
   background: rgba(0, 0, 0, 0.8);
@@ -54,25 +49,17 @@
   border-top-color: rgba(0, 0, 0, 0.8);
 }
 
-.chart {
-  height: 450px;
-  border-radius: 0 0 10px 10px;
-  box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
-  background-color: #262729;
-}
-
-.bubblechart {
-  height: 500px;
-  border-radius: 0 0 10px 10px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  background-color: #262729;
-}
-
 .js-calendar-graph-svg {
   width: 100%;
   height: 250px;
   padding-top: 5%;
   overflow: hidden;
+}
+
+.chart {
+  height: 300px;
+  border-radius: 0 0 10px 10px;
+  background-color: #262729;
 }
 
 text.month,
@@ -114,23 +101,29 @@ text.month,
 }
 
 .graphtitle {
-  display: flex;
+  display: inline-table;
   justify-content: center;
   color: #ffffff;
   height: 25px;
   width: auto;
-  padding-top: 25%;
   padding-left: 70px;
-  padding-right: 10px;
-  margin-top: 2px;
+  padding-right: 10px; 
+}
+
+#heatmap-card{
+  background-color: #262729;
+}
+.heatmap-footer{
+  background-color: #262729;
+  border-radius: 10px;
 }
 
 .heatmap-heading {
   margin-bottom: auto;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .para {
-  color: #d7d7d7;
+  color: #D7D7D7;
 }
 
 /* Mobile Biew- Media Queries */
@@ -146,14 +139,12 @@ text.month,
     padding-top: 0%;
   }
   .titles {
-    padding-top: 1em;
     height: 10em;
   }
   .heatmap-heading {
     font-size: small;
   }
   .graphtitles {
-    font-size: 0.6em;
     padding-left: 0.5em;
     padding-right: 1em;
     margin-left: 0.5em;
@@ -161,6 +152,10 @@ text.month,
   .js-calendar-graph-svg {
     width: 125%;
     height: 100%;
+  }
+  .graphtitle {
+    font-size: xx-small;
+    display: table-cell;
   }
 }
 
@@ -172,6 +167,11 @@ text.month,
   .js-calendar-graph-svg {
     padding-top: 0em;
   }
+  .graphtitle {
+    font-size: xx-small;
+    display: table-cell;
+  }
+
 }
 @media only screen and (max-width: 400px) {
   .heatmap-heading {
@@ -179,6 +179,7 @@ text.month,
   }
   .graphtitle {
     font-size: xx-small;
+    display: table-cell;
   }
   .js-calendar-graph-svg {
     padding-top: 0;
