--- a/stylesheet/sidenav.css
+++ b/stylesheet/sidenav.css
@@ -6,6 +6,28 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+
+/* Scrollbar Styling */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #121212;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #555555; 
+}
+::-webkit-scrollbar-thumb:hover{
+  background: #6d6d6d; 
+}
+
 #header-toggle:hover {
   color: #b15dff;
 }
@@ -129,6 +151,8 @@
   left: -330px;
   transition: all 0.4s ease;
 }
+
+
 .sidebar .nav-links li a .link_name:hover {
   color: #ffffff;
   display: block;
@@ -240,6 +264,45 @@
   font-weight: 600;
 }
 
+/* stats and problems */
+.list-group-item{
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.prblm-name{
+  margin-right: 30rem;
+  margin-left: 5rem;
+  height: 3.5rem;
+  background-color:#424242;
+  box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
+}
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: .5rem 1rem;
+  color: #D7D7D7;
+  text-decoration: none;
+  background-color:#424242;
+  border:none;
+  width: 50%;
+
+}
+
+.list-group-horizontal>.list-group-item:first-child {
+  width: 70%;
+}
+
+.list-group-horizontal>.list-group-item:last-child {
+  width: 30%;
+  overflow: hidden;
+}
+
+
+
 /* Responsivne  */
 @media only screen and (max-width: 600px) {
   .sidebar.close {
@@ -256,4 +319,45 @@
   .container {
     width: 100vw;
   }
+  .prblm-name {
+    margin-right: 1rem;
+    margin-left: 1rem;
+    height: 3.5rem;
+}
+
+.list-group-horizontal>.list-group-item {
+  width: auto;
+  overflow: hidden;
+}
+}
+
+/* Mobile Biew- Media Queries */
+@media only screen and (max-width: 1200px) {
+  .prblm-name {
+    margin-left: 1rem;
+    height: 3.5rem;
+}
+.list-group-horizontal>.list-group-item:last-child {
+  overflow: hidden;
+  width: auto;
+}
+}
+
+@media only screen and (max-width: 800px) {
+  .list-group-horizontal>.list-group-item:last-child {
+    overflow: hidden;
+    width: auto;
+  }
+
+}
+@media only screen and (max-width: 400px) {
+  .prblm-name {
+    margin-right: 1rem;
+    margin-left: 1rem;
+    height: 3.5rem;
+}
+.list-group-horizontal>.list-group-item:last-child {
+  overflow: hidden;
+  width: auto;
+}
 }
