--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -101,7 +101,7 @@ h1 {
   width: 360px;
   padding: 4rem 2rem;
   border-radius: 1rem;
-  box-shadow: 0 10px 25px rgba(121, 122, 122, 0.2);
+  box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
   position: relative;
   top: 0;
   transition: top ease 0.5s;
